--- a/Ch2/app.yaml
+++ b/Ch2/app.yaml
@@ -1,12 +1,13 @@
 # 2018年からflex環境でも3系が動くようになった
 # 2系の場合と設定がやや異なるため原著をやや修正
 # 変更点の詳細は[こちら](https://cloud.google.com/appengine/docs/standard/python3/python-differences)
-
-runtime python37
+runtime: python
+runtime_config:
+  python_version: 3
 env: flex
-service: flights
+service: default
 manual_scaling:
-  instance: 1
+  instances: 1
 
 env_variables:
   # 自身の設定したbucket名に適宜書き換え
